--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>Lorem ipsum dolor consectetur elit</p>
+	    <p>Nulam dictum felis eu pede</p>
+	    <p>Nam eget dui. Etiam rhoncus</p>
+	</div>
+
+	<ul>
+		<div>
+			<li>First item</li>
+		    <li>Second item</li>
+		    <li>Third item</li>
+		    <li>Fourth item</li>
+		    <li>Fifth item</li>
+		</div>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
