--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<article>
 		<p>Lorem ipsum dolor consectetur elit</p>
 	    <p>Nulam dictum felis eu pede</p>
 	    <p>Nam eget dui. Etiam rhoncus</p>
-	</div>
+	</article>
 
 	<ul>
 		<div>
